--- a/prjCoreWebWantWant/Views/Shared/_BackstageLayout.cshtml
+++ b/prjCoreWebWantWant/Views/Shared/_BackstageLayout.cshtml
@@ -122,6 +122,51 @@
 
     <!-- lightbox init -->
     <script src="~/backstage1/static/js/lightbox.init.js"></script>
+      <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @await RenderSectionAsync("Scripts", required: false)
+
+   
+
+     <!--Approve js-->
+     <!--JAVASCRIPT-- >
+    <script src="~/backstage1/static/js/jquery.min.js" ></script>
+    <script src="~/backstage1/static/js/bootstrap.bundle.min.js"></script>
+    <script src="~/backstage1/static/js/metisMenu.min.js"></script>
+    <script src="~/backstage1/static/js/simplebar.min.js"></script>
+    <script src="~/backstage1/static/js/waves.min.js"></script>
+    <script src="~/backstage1/static/js/feather.min.js"></script>
+
+ @*   <!-- pace js -->
+    <script src="~/backstage/static/js/pace.min.js"></script>*@
+
+    <!-- Required datatable js -->
+    <script src="~/backstage1/static/js/jquery.dataTables.min.js"></script>
+
+    <!-- Responsive examples -->
+    <script src="~/backstage1/static/js/dataTables.responsive.min.js"></script>
+    <script src="~/backstage1/static/js/responsive.bootstrap4.min.js"></script>
+
+    <!-- init js show 10 頁   previous next -->
+    <script src="~/backstage1/static/js/datatable-pages.init.js"></script>
+    <script src="~/backstage1/static/js/dataTables.bootstrap4.min.js"></script>
+
+
+    <!-- Table Editable plugin -->
+    <script src="~/backstage1/static/js/table-edits.min.js"></script>
+
+    <script src="~/backstage1/static/js/table-editable.int.js"></script>
+
+    <script src="~/backstage1/static/js/app.js"></script>
+
+    <!-- JobdetailBackstage js -->
+
+    <!-- glightbox js -->
+    <script src="~/backstage1/static/js/glightbox.min.js"></script>
+
+    <!-- lightbox init -->
+    <script src="~/backstage1/static/js/lightbox.init.js"></script>
 
 
    
