--- a/prjCoreWebWantWant/Views/Backstage/ApplicationRecord.cshtml
+++ b/prjCoreWebWantWant/Views/Backstage/ApplicationRecord.cshtml
@@ -13,11 +13,11 @@
     <!-- App Css-->
     <link href="~/Backstage/static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
 
-    @*<link href="~/Backstage/static/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css">*@
+    <link href="~/Backstage/static/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css">
 </head>
 
 
-@section Scripts{
+@section Styles{
     <style>
         .table {
             text-align: center;
@@ -26,6 +26,12 @@
         .gap-2 {
             justify-content: center;
         }
+
+        .badge {
+            background-color: #528EAF;
+            display: block;
+        }
+
     </style>
 }
 
@@ -42,7 +48,7 @@
                             <ul class="nav nav-tabs nav-tabs-custom nav-justified"
                                 role="tablist">
                                 <li class="nav-item" onclick="showApplied();">
-                                    <a class="nav-link"
+                                    <a class="nav-link active "
                                        data-bs-toggle="tab"
                                        href="#Applied"
                                        role="tab">
@@ -86,185 +92,11 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="card-body" id="Collect">
-                            <div class="table-responsive">
-                                <table class="table table-editable table-nowrap align-middle table-edits table-hover">
-                                    <thead>
-                                        <tr>
-                                            <th>序號</th>
-                                            <th>任務名稱</th>
-                                            <th>任務內容</th>
-                                            <th>任務日期</th>
-                                            <th>更改狀態</th>
-                                            <th>修改</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr data-id="1">
-                                            <td data-field="id" style="width: 80px">1</td>
-                                            <td data-field="name">David McHenry</td>
-                                            <td data-field="age">24</td>
-                                            <td data-field="gender">Male</td>
-                                            <td data-field="gender">Male</td>
-                                            <td style="width: 100px">
-                                                <a class="btn btn-outline-secondary btn-sm edit" title="Edit">
-                                                    <i class="fas fa-pencil-alt"></i>
-                                                </a>
-                                            </td>
-
-                                        </tr>
-                                        <tr data-id="2">
-                                            <td data-field="id">2</td>
-                                            <td data-field="name">Frank Kirk</td>
-                                            <td data-field="age">22</td>
-                                            <td data-field="gender">Male</td>
-                                            <td data-field="gender">Male</td>
-                                            <td>
-                                                <a class="btn btn-outline-secondary btn-sm edit" title="Edit">
-                                                    <i class="fas fa-pencil-alt"></i>
-                                                </a>
-                                            </td>
-
-
-                                        </tr>
-                                        <tr data-id="3">
-                                            <td data-field="id">3</td>
-                                            <td data-field="name">Rafael Morales</td>
-                                            <td data-field="age">26</td>
-                                            <td data-field="gender">Male</td>
-                                            <td data-field="gender">Male</td>
-                                            <td>
-                                                <a class="btn btn-outline-secondary btn-sm edit" title="Edit">
-                                                    <i class="fas fa-pencil-alt"></i>
-                                                </a>
-                                            </td>
-
-                                        </tr>
-                                        <tr data-id="4">
-                                            <td data-field="id">4</td>
-                                            <td data-field="name">Mark Ellison</td>
-                                            <td data-field="age">32</td>
-                                            <td data-field="gender">Male</td>
-                                            <td data-field="gender">Male</td>
-                                            <td>
-                                                <a class="btn btn-outline-secondary btn-sm edit" title="Edit">
-                                                    <i class="fas fa-pencil-alt"></i>
-                                                </a>
-                                            </td>
-
-                                        </tr>
-                                        <tr data-id="5">
-                                            <td data-field="id">5</td>
-                                            <td data-field="name">Minnie Walter</td>
-                                            <td data-field="age">27</td>
-                                            <td data-field="gender">Female</td>
-                                            <td data-field="gender">Male</td>
-                                            <td>
-                                                <a class="btn btn-outline-secondary btn-sm edit" title="Edit">
-                                                    <i class="fas fa-pencil-alt"></i>
-                                                </a>
-                                            </td>
-
-                                        </tr>
-                                    </tbody>
-                                    </table>
-                            </div>
-
-                        </div>
-
-                        <div class="card-body" style="display:none" id="Applied">
-                            <div class="table-responsive">
-                                <table class="table table-editable table-nowrap align-middle table-edits table-hover">
-                                    <thead>
-                                        <tr>
-                                            <th>序號</th>
-                                            <th>任務名稱</th>
-                                            <th>任務內容</th>
-                                            <th>任務日期</th>
-                                            <th>更改狀態</th>
-                                            <th>修改</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr data-id="1">
-                                            <td data-field="id" style="width: 80px">1</td>
-                                            <td data-field="name">David McHenry</td>
-                                            <td data-field="age">24</td>
-                                            <td data-field="gender">Male</td>
-                                            <td data-field="gender">Male</td>
-                                            <td style="width: 100px">
-                                                <a class="btn btn-outline-secondary btn-sm edit" title="Edit">
-                                                    <i class="fas fa-pencil-alt"></i>
-                                                </a>
-                                            </td>
-
-                                        </tr>
-
-                                        <tr data-id="2">
-                                            <td data-field="id">2</td>
-                                            <td data-field="name">Frank Kirk</td>
-                                            <td data-field="age">22</td>
-                                            <td data-field="gender">Male</td>
-                                            <td data-field="gender">Male</td>
-                                            <td>
-                                                <a class="btn btn-outline-secondary btn-sm edit" title="Edit">
-                                                    <i class="fas fa-pencil-alt"></i>
-                                                </a>
-                                            </td>
-
-
-                                        </tr>
-
-                                        <tr data-id="3">
-                                            <td data-field="id">3</td>
-                                            <td data-field="name">Rafael Morales</td>
-                                            <td data-field="age">26</td>
-                                            <td data-field="gender">Male</td>
-                                            <td data-field="gender">Male</td>
-                                            <td>
-                                                <a class="btn btn-outline-secondary btn-sm edit" title="Edit">
-                                                    <i class="fas fa-pencil-alt"></i>
-                                                </a>
-                                            </td>
-                                        </tr>
-
-                                        <tr data-id="4">
-                                            <td data-field="id">4</td>
-                                            <td data-field="name">Mark Ellison</td>
-                                            <td data-field="age">32</td>
-                                            <td data-field="gender">Male</td>
-                                            <td data-field="gender">Male</td>
-                                            <td>
-                                                <a class="btn btn-outline-secondary btn-sm edit" title="Edit">
-                                                    <i class="fas fa-pencil-alt"></i>
-                                                </a>
-                                            </td>
-
-                                        </tr>
-
-                                        <tr data-id="5">
-                                            <td data-field="id">5</td>
-                                            <td data-field="name">Minnie Walter</td>
-                                            <td data-field="age">27</td>
-                                            <td data-field="gender">Female</td>
-                                            <td data-field="gender">Male</td>
-                                            <td>
-                                                <a class="btn btn-outline-secondary btn-sm edit" title="Edit">
-                                                    <i class="fas fa-pencil-alt"></i>
-                                                </a>
-                                            </td>
-
-                                        </tr>
-                                    </tbody>
-                                    </table>
-                            </div>
-
-                        </div> -->
 
                 <div class="row" id="Applied">
                     <div class="col">
                         <div class="table-responsive mb-4">
-                            <table class="table align-middle datatable dt-responsive table-check nowrap"
+                            <table class="table align-middle datatable dt-responsive table-check nowrap table table-hover"
                                    style="
                   border-collapse: collapse;
                   border-spacing: 0 8px;
