--- a/prjCoreWebWantWant/Views/Backstage/TaskCollection.cshtml
+++ b/prjCoreWebWantWant/Views/Backstage/TaskCollection.cshtml
@@ -18,7 +18,7 @@
         <!-- App Css-->
         <link href="~/Backstage/static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+        @* <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" /> *@
 
         <link href="~/Backstage/static/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css">
 
@@ -30,12 +30,22 @@
 @section Styles{
     <style>
         .table {
-            text-align: center;
+            text-align: center;            
         }
 
         .gap-2 {
             justify-content: center;
         }
+
+        .badge {
+            background-color: #528EAF;
+            display: block;
+        }
+
+        tr:hover {
+            background-color:gray;
+        }
+
     </style>
 }
 
@@ -285,7 +295,7 @@
                 <div class="row" id="Collect">
                     <div class="col">
                         <div class="table-responsive mb-4">
-                            <table class="table align-middle datatable dt-responsive table-check nowrap"
+                            <table class="table align-middle datatable dt-responsive table-check nowrap table table-hover"
                                    style="
                   border-collapse: collapse;
                   border-spacing: 0 8px;
